--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -20,6 +20,14 @@ jobs:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.PRODUCTION_DB_PASSWORD }}
       SUPABASE_PROJECT_ID: ${{ secrets.PRODUCTION_PROJECT_ID }}
+      SUPABASE_AUTH_GOOGLE_CLIENT_ID:
+        ${{ secrets.SUPABASE_AUTH_GOOGLE_CLIENT_ID }}
+      SUPABASE_AUTH_GOOGLE_CLIENT_SECRET:
+        ${{ secrets.SUPABASE_AUTH_GOOGLE_CLIENT_SECRET }}
+      SUPABASE_AUTH_GITHUB_CLIENT_ID:
+        ${{ secrets.SUPABASE_AUTH_GITHUB_CLIENT_ID }}
+      SUPABASE_AUTH_GITHUB_CLIENT_SECRET:
+        ${{ secrets.SUPABASE_AUTH_GITHUB_CLIENT_SECRET }}
 
     steps:
       - uses: actions/checkout@v4
