--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
