--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "supabase": "^1.167.4",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
