--- a/.prettierrc
+++ b/.prettierrc
@@ -11,8 +11,9 @@
     "^@/lib/(.*)$",
     "^@/components/(.*)$",
     "^@/app/(.*)$",
-    "^./(.*)$",
-    "^../(.*)$"
+    "^@/utils/(.*)$",
+    "^../(.*)$",
+    "^./(.*)$"
   ],
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
@@ -23,3 +24,4 @@
   "singleQuote": true,
   "proseWrap": "always"
 }
+
