--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lucide-react": "^0.378.0",
     "matter-js": "^0.19.0",
     "nanoid": "^5.0.7",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
