--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
     "supabase:start": "supabase start",
     "supabase:typegen": "supabase gen types typescript --local > supabase/types.gen.ts",
     "supabase:migrate": "supabase db diff | supabase migration new",
@@ -74,6 +75,7 @@
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "vitest": "^2.0.3",
     "webpack": "^5.92.1"
   }
 }
