refactored remaining actions to use controllers and not zsa

--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "zsa": "^0.4.0",
-    "zsa-react": "^0.1.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
