--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-boundaries": "^5.0.0",
     "mini-svg-data-uri": "^1.4.4",
     "postcss": "^8",
     "prettier": "^3.3.2",
