adding vercel analytics and speed insights

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@supabase/supabase-js": "^2.43.2",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.17.3",
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
