--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,22 +3,19 @@
   "configurations": [
     {
       "name": "Next.js: debug full stack",
-      "type": "pwa-node",
+      "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/next/dist/bin/next",
-      "args": ["dev"],
-      "runtimeExecutable": "node",
+      "program": "${workspaceFolder}/node_modules/.bin/next",
       "runtimeArgs": ["--inspect"],
-      "cwd": "${workspaceFolder}",
       "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}",
       "serverReadyAction": {
-        "action": "debugWithChrome",
+        "action": "debugWithEdge",
         "killOnServerStop": true,
         "pattern": "- Local:.+(https?://.+)",
         "uriFormat": "%s",
         "webRoot": "${workspaceFolder}"
-      },
-      "trace": true
-    }
+      }
+    },
   ]
 }
