--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@supabase/supabase-js": "^2.43.2",
     "@tanstack/match-sorter-utils": "^8.15.1",
     "@tanstack/react-table": "^8.17.3",
+    "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.0",
